# cvstruct

./: .gitignore  README.md  pyproject.toml  setup.py
bboxes/: convert.py
contours/: convert.py  merge.py  utils.py
cvstruct/bboxes/: convert.py
cvstruct/contours/: convert.py  merge.py  subs.py  utils.py
cvstruct/convert/: bbox2bbox.py  cnt2poly.py  cnt2rle.py  mask2cnt.py  poly2cnt.py  poly2rle.py
cvstruct/insts/: utils.py
cvstruct/merge/: cnts.py  insts.py  subs.py
cvstruct/polys/: convert.py
cvstruct/rles/: convert.py
cvstruct/sort/: insts.py
cvstruct/typedef/: bboxes.py  contours.py  insts.py  masks.py  polys.py  rles.py
insts/: utils.py
polys/: convert.py
typedef/: contours.py  insts.py  polys.py
