[build-system]
requires = ["setuptools>=61.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cvstruct"
requires-python = ">=3.8"
dynamic = ["version"]
dependencies = [
    "numpy",
    "pycocotools"
]

[project.optional-dependencies]
gui = ["opencv-python"]
no_gui = ["opencv-python-headless"]

[tool.setuptools]
packages = ["cvstruct"]

[tool.pyright]
extraPaths = ["./cvstruct"]

[tool.setuptools_scm]